@@ -58,165 +58,6 @@ namespace Mono.Linker {
 			return asm;
 		}
 
-		public TypeDefinition Resolve (TypeReference type)
-		{
-			type = type.GetOriginalType ();
-
-			if (type is TypeDefinition)
-				return (TypeDefinition) type;
-
-			AssemblyNameReference reference = type.Scope as AssemblyNameReference;
-			if (reference != null) {
-				AssemblyDefinition assembly = Resolve (reference);
-				return assembly.MainModule.Types [type.FullName];
-			}
-
-			ModuleDefinition module = type.Scope as ModuleDefinition;
-			if (module != null)
-				return module.Types [type.FullName];
-
-			throw new NotImplementedException ();
-		}
-
-		public FieldDefinition Resolve (FieldReference field)
-		{
-			TypeDefinition type = Resolve (field.DeclaringType);
-			return GetField (type.Fields, field);
-		}
-
-		static FieldDefinition GetField (ICollection collection, FieldReference reference)
-		{
-			foreach (FieldDefinition field in collection) {
-				if (field.Name != reference.Name)
-					continue;
-
-				if (!AreSame (field.FieldType, reference.FieldType))
-					continue;
-
-				return field;
-			}
-
-			return null;
-		}
-
-		public MethodDefinition Resolve (MethodReference method)
-		{
-			TypeDefinition type = Resolve (method.DeclaringType);
-			method = method.GetOriginalMethod ();
-			if (method.Name == MethodDefinition.Cctor || method.Name == MethodDefinition.Ctor)
-				return GetMethod (type.Constructors, method);
-			else
-				return GetMethod (type, method);
-		}
-
-		MethodDefinition GetMethod (TypeDefinition type, MethodReference reference)
-		{
-			while (type != null) {
-				MethodDefinition method = GetMethod (type.Methods, reference);
-				if (method == null)
-					type = Resolve (type.BaseType);
-				else
-					return method;
-			}
-
-			return null;
-		}
-
-		static MethodDefinition GetMethod (ICollection collection, MethodReference reference)
-		{
-			foreach (MethodDefinition meth in collection) {
-				
-				if (meth.Name != reference.Name)
-					continue;
-
-				if (!AreSame (meth.ReturnType.ReturnType, reference.ReturnType.ReturnType))
-					continue;
-
-				if (!AreSame (meth.Parameters, reference.Parameters))
-					continue;
-
-				return meth;
-			}
-
-			return null;
-		}
-
-		static bool AreSame (ParameterDefinitionCollection a, ParameterDefinitionCollection b)
-		{
-			if (a.Count != b.Count)
-				return false;
-
-			if (a.Count == 0)
-				return true;
-
-			for (int i = 0; i < a.Count; i++)
-				if (!AreSame (a [i].ParameterType, b [i].ParameterType))
-					return false;
-
-			return true;
-		}
-
-		static bool AreSame (ModType a, ModType b)
-		{
-			if (!AreSame (a.ModifierType, b.ModifierType))
-				return false;
-
-			return AreSame (a.ElementType, b.ElementType);
-		}
-
-		static bool AreSame (TypeSpecification a, TypeSpecification b)
-		{
-			if (a is GenericInstanceType)
-				return AreSame ((GenericInstanceType) a, (GenericInstanceType) b);
-
-			if (a is ModType)
-				return AreSame ((ModType) a, (ModType) b);
-
-			return AreSame (a.ElementType, b.ElementType);
-		}
-
-		static bool AreSame (GenericInstanceType a, GenericInstanceType b)
-		{
-			if (!AreSame (a.ElementType, b.ElementType))
-				return false;
-
-			if (a.GenericArguments.Count != b.GenericArguments.Count)
-				return false;
-
-			if (a.GenericArguments.Count == 0)
-				return true;
-
-			for (int i = 0; i < a.GenericArguments.Count; i++)
-				if (!AreSame (a.GenericArguments [i], b.GenericArguments [i]))
-					return false;
-
-			return true;
-		}
-
-		static bool AreSame (GenericParameter a, GenericParameter b)
-		{
-			return a.Position == b.Position;
-		}
-
-		static bool AreSame (TypeReference a, TypeReference b)
-		{
-			if (a is TypeSpecification || b is TypeSpecification) {
-				if (a.GetType () != b.GetType ())
-					return false;
-
-				return AreSame ((TypeSpecification) a, (TypeSpecification) b);
-			}
-
-			if (a is GenericParameter || b is GenericParameter) {
-				if (a.GetType () != b.GetType ())
-					return false;
-
-				return AreSame ((GenericParameter) a, (GenericParameter) b);
-			}
-
-			return a.FullName == b.FullName;
-		}
-
 		public void CacheAssembly (AssemblyDefinition assembly)
 		{
 			_assemblies [assembly.Name.Name] = assembly;
